Made it easier and faster to build

--- a/armhf/Dockerfile
+++ b/armhf/Dockerfile
@@ -3,17 +3,7 @@ FROM debian:latest
 MAINTAINER InnovativeInventor
 
 RUN apt-get update
-RUN apt-get install curl -y
-RUN apt-get install software-properties-common -y
-RUN apt-get install debconf-utils
-RUN apt-get install git -y
-RUN apt-get install nano
-RUN apt-get install whiptail -y
-RUN apt-get install openvpn -y
-RUN apt-get install dhcpcd5 -y
-RUN apt-get install dnsutils -y
-RUN apt-get install expect -y
-RUN apt-get install whiptail
+RUN apt-get install -y curl software-properties-common debconf-utils git nano whiptail openvpn dhcpcd5 dnsutils expect
 RUN mkdir /home/pivpn
 RUN curl -L https://install.pivpn.io -o install.sh
 RUN useradd pivpn
