--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -1,19 +1,9 @@
-FROM ubuntu:16.04
+FROM arm32v7/debian:latest
 
 MAINTAINER InnovativeInventor
 
 RUN apt-get update
-RUN apt-get install curl -y
-RUN apt-get install software-properties-common -y
-RUN apt-get install debconf-utils
-RUN apt-get install git -y
-RUN apt-get install nano
-RUN apt-get install whiptail -y
-RUN apt-get install openvpn -y
-RUN apt-get install dhcpcd5 -y
-RUN apt-get install dnsutils -y
-RUN apt-get install expect -y
-RUN apt-get install whiptail
+RUN apt-get install -y curl software-properties-common debconf-utils git nano whiptail openvpn dhcpcd5 dnsutils expect
 RUN mkdir /home/pivpn
 RUN curl -L https://install.pivpn.io -o install.sh
 RUN useradd pivpn
