Replaced mkdir with useradd -m

--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -4,7 +4,6 @@ MAINTAINER InnovativeInventor
 
 RUN apt-get update
 RUN apt-get install -y curl software-properties-common debconf-utils git nano whiptail openvpn dhcpcd5 dnsutils expect
-RUN mkdir /home/pivpn
 RUN curl -L https://install.pivpn.io -o install.sh
-RUN useradd pivpn
+RUN useradd -m pivpn
 EXPOSE 1194
